Update scalacheck to 1.15.3 and parallel-collections to 1.0.2